# Dynamic-Traffic-Signal-Control-System

./: Project_documentation.ipynb  Project_documentation.md  README.md  main.py  project development.ipynb  project_proposal.md  pyproject.toml
Reinf_Learn/: Q_learn.py  __init__.py  environment.py  utils.py
Reports/: Weekly_Report_1.ipynb  Weekly_Report_2.ipynb  Weekly_Report_3.ipynb  Weekly_Report_4.ipynb  Weekly_Report_5.ipynb
Tests/: test_QLearn.py  test_environment.py  test_training_running.py
TrafficSimulator/: __init__.py  window.py
