[tool.poetry]
name = "dynamic-traffic-signal-control-system"
version = "0.1.0"
description = "Dynamic Traffic Signal Control System"
authors = ["Alessandro Di Frenna"]
readme = "README.md"

packages = [
    { include = "TrafficSimulator" },
    { include = "Reinf_Learn" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = ">=2.3.4,<3.0.0"
pandas = ">=2.3.3,<3.0.0"
matplotlib = ">=3.10.7,<4.0.0"
scipy = ">=1.16.3,<2.0.0"
pygame = ">=2.6.1,<3.0.0"

[tool.poetry.group.dev.dependencies]
pylint = ">=4.0.2,<5.0.0"
coverage = ">=7.11.0,<8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
